<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundApp"
    android:contentDescription="@string/line"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:ems="10"
        android:hint="@string/Login_Username"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/Login_Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_button"
        android:height="50dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textColorHint="@color/font" />

    <TextView
        android:id="@+id/uriRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/strRegister"
        android:textColor="#ffffff"
        android:textColorLink="#ffffff" />

    <TextView
        android:id="@+id/linkAMDVietNam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uriRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/linkAMDVietNam"
        android:textColor="#ffffff"
        android:textColorLink="#ffffff" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkAMDVietNam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/line"
        android:src="@drawable/line" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/AppNameLogin"
        android:textColor="@color/font"
        android:textSize="@dimen/FontSizeLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/companyName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

</RelativeLayout>